fix rules issue by remove the extra space from addtardinessrule function

--- a/src/app/main/rules/rules-list/rules-list.component.scss
+++ b/src/app/main/rules/rules-list/rules-list.component.scss
@@ -4,9 +4,6 @@ table{
             width: auto;
         }
         &:nth-child(2){
-            width: auto;
-        }
-        &:nth-child(3){
             width: 5rem;
         }
      }
